// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArgyleModalAdapter > event:other > logs ApplicantAccessedArgyleModalMFAScreen Event 1`] = `
{
  "name": "mfa - opened",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantAttemptedArgyleLogin Event 1`] = `
{
  "name": "login - form submitted",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleAuthRequiredLoginError Event 1`] = `
{
  "name": "login - opened",
  "properties": {
    "errorCode": "auth_required",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleConnectionUnavailableLoginError Event 1`] = `
{
  "name": "login - opened",
  "properties": {
    "errorCode": "connection_unavailable",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleExpiredCredentialsLoginError Event 1`] = `
{
  "name": "login - opened",
  "properties": {
    "errorCode": "expired_credentials",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleInvalidAuthLoginError Event 1`] = `
{
  "name": "login - opened",
  "properties": {
    "errorCode": "invalid_auth",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleInvalidCredentialsLoginError Event 1`] = `
{
  "name": "login - opened",
  "properties": {
    "errorCode": "invalid_credentials",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleMfaCanceledLoginError Event 1`] = `
{
  "name": "login - opened",
  "properties": {
    "errorCode": "mfa_cancelled_by_the_user",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantUpdatedArgyleSearchTerm Event 1`] = `
{
  "payload": {
    "name": "search - term updated",
    "properties": {
      "tab": "tab",
      "term": "search term",
    },
    "tab": "tab",
    "term": "search term",
  },
  "tab": "tab",
  "term": "search term",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantViewedArgyleDefaultProviderSearch Event 1`] = `
{
  "name": "search - opened",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantViewedArgyleLoginPage Event 1`] = `
{
  "name": "login - opened",
  "properties": {
    "errorCode": "other",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantViewedArgyleProviderConfirmation Event 1`] = `
{
  "name": "search - link item selected",
}
`;

exports[`ArgyleModalAdapter > event:other > logs onAccountCreated Event 1`] = `
{
  "accountId": "account-id",
  "platformId": "platform-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs onAccountError Event 1`] = `
{
  "accountId": "account-id",
  "platformId": "platform-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs onAccountRemoved Event 1`] = `
{
  "accountId": "account-id",
  "platformId": "platform-id",
}
`;

exports[`ArgyleModalAdapter > open > calls track user action 1`] = `
[
  "ApplicantSelectedEmployerOrPlatformItem",
  {
    "is_default_option": true,
    "item_id": "id",
    "item_name": "test-name",
    "item_type": "response-type",
    "locale": "en",
    "provider_name": "pinwheel",
  },
]
`;
